--- a/node.html
+++ b/node.html
@@ -9,7 +9,7 @@
     <ul id="menu">
         <li id="first">First</li>
         <li id="second">Second</li>
-        <li id="thrid">Thrid</li>
+        <li id="third">Third</li>
     </ul>
 
     <script>
