--- a/element.html
+++ b/element.html
@@ -6,8 +6,15 @@
     <title>Element</title>
 </head>
 <body>
+    <h1 id="title"></h1>
+    <p id="description"></p>
     <script>
-        
+        const title = document.getElementById("title");
+        title.textContent = "JavaScript DOM"
+
+        const description = document.getElementById("description");
+        description.textContent = "Belajar JavaScript DOM di Programmer Zaman Now!";
+
     </script>
 </body>
 </html>
